--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
 plugins {
     id 'application'
+    id 'idea'
     id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 javafx {
     version = "22.0.1"
     modules = [ 'javafx.controls', 'javafx.web' ]
+}
+
+idea {
+    module {
+        downloadSources = true
+    }
 }
 
 group = 'net.cybercake.display'
