--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,6 @@
 plugins {
     id 'application'
     id 'idea'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
-}
-
-javafx {
-    version = "22.0.1"
-    modules = [ 'javafx.controls', 'javafx.web' ]
 }
 
 idea {
@@ -21,8 +15,20 @@ mainClassName = "net.cybercake.display.Main"
 
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
+    implementation 'com.google.api-client:google-api-client:2.6.0'
 
+//    implementation files('libs/jcef.jar') // Add JCEF JAR
+    implementation 'me.friwi:jcefmaven:127.3.1'
+}
+
+application {
+    applicationDefaultJvmArgs = [
+            "-Djava.library.path=libs/native",   // Path to native libraries
+            "-Djcef.resources.dir=libs/native"  // Path to JCEF resources
+    ]
+    mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
