--- a/build.gradle
+++ b/build.gradle
@@ -31,14 +31,14 @@ dependencies {
 
 //    implementation files('libs/jcef.jar') // Add JCEF JAR
     implementation 'me.friwi:jcefmaven:127.3.1'
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
-    implementation 'uk.co.caprica:vlcj:4.8.3'
+    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
+    implementation 'uk.co.caprica:vlcj:4.6.0'
 }
 
 application {
     applicationDefaultJvmArgs = [
-            "-Djava.library.path=libs/native",   // Path to native libraries
-            "-Djcef.resources.dir=libs/native"  // Path to JCEF resources
+            "-Djava.library.path=libs" + File.separator + "native",   // Path to native libraries
+            "-Djcef.resources.dir=libs" + File.separator + "native"  // Path to JCEF resources
     ]
     mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
