--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ dependencies {
 
 application {
     applicationDefaultJvmArgs = [
-            "-Djava.library.path=libs" + File.separator + "native",   // Path to native libraries
-            "-Djcef.resources.dir=libs" + File.separator + "native"  // Path to JCEF resources
+            "-Djava.library.path=." + File.separator + "libs" + File.separator + "native",   // Path to native libraries
+            "-Djcef.resources.dir=." + File.separator + "libs" + File.separator + "native"  // Path to JCEF resources
     ]
     mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
