--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,10 @@ dependencies {
 }
 
 application {
+    String path = String.valueOf(project.projectDir) + File.separator + "libs" + File.separator + "native"
     applicationDefaultJvmArgs = [
-            "-Djava.library.path=." + File.separator + "libs" + File.separator + "native",   // Path to native libraries
-            "-Djcef.resources.dir=." + File.separator + "libs" + File.separator + "native"  // Path to JCEF resources
+            "-Djava.library.path=" + path,   // Path to native libraries
+            "-Djcef.resources.dir=" + path  // Path to JCEF resources
     ]
     mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
