--- a/build.gradle
+++ b/build.gradle
@@ -37,13 +37,15 @@ dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
     implementation 'uk.co.caprica:vlcj:4.9.0'
     implementation 'org.bytedeco:javacv-platform:1.5.6'
+    implementation 'org.openpnp:opencv:3.2.0-0'
+    implementation 'nu.pattern:opencv:2.4.9-4'
 }
 
 application {
-    String path = String.valueOf(project.rootDir) + File.separator + "libs" + File.separator + "jcef"
+    String jcefPath = String.valueOf(project.rootDir) + File.separator + "libs" + File.separator + "jcef"
     applicationDefaultJvmArgs = [
-            "-Djava.library.path=" + path,   // Path to native libraries
-            "-Djcef.resources.dir=" + path  // Path to JCEF resources
+            "-Djava.library.path=" + System.getProperty("java.library.path") + ";" + jcefPath,   // Path to native libraries
+            "-Djcef.resources.dir=" + jcefPath  // Path to JCEF resources
     ]
     mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
