Squashed commit of the following:
commit b514cac0954e63fd2002616ec0ec4e173720a890
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Fri Mar 7 11:50:14 2025 -0500

    A

commit c4c06433a4efc41954200863a68c9c4c9da03f2d
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Fri Mar 7 11:49:27 2025 -0500

    Update TestCameraFrame.java

commit 208fc339f667fcec0073ba9e3a9054dac833794b
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Thu Mar 6 18:35:50 2025 -0500

    a

commit dea8e0377f38902c3df7ede1a50a482e7249d4cc
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Thu Mar 6 17:52:21 2025 -0500

    Update Application.java

commit 757d020fd1765c5a0e1e1dfa19dd432cd7c22b2a
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Thu Mar 6 17:46:55 2025 -0500

    Update Application.java

commit 744ff7873c257509d64cc9b79a9cb55c36d1d997
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Thu Mar 6 17:46:19 2025 -0500

    a

commit 47415411bf3d6ed8108dbcad27b34996c15d57af
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Wed Feb 26 16:52:22 2025 -0500

    Update JVlcPlayer.java

commit 9d9ef20c7ee2293c858993844c001a346ba9f61b
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Wed Feb 26 16:51:45 2025 -0500

    a

commit f22381f691782ce9ec122789ef01cfdde0525b37
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Wed Feb 26 16:43:05 2025 -0500

    -- vlc end of use --

commit 3d98a066317dc2cc63d3ed02d95c9080c46b2a93
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Wed Feb 26 16:42:56 2025 -0500

    Update Application.java

commit ebb710cf53154d1d7cc94354c719c445db00ba4d
Author: CyberedCake <157924032+nfranks8036@users.noreply.github.com>
Date:   Wed Feb 26 16:35:33 2025 -0500

    Update Application.java

commit 40241c8

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+/**
+ * need:
+ * vlc
+ * yt-dlp
+ * youtube logged-in firefox account
+ */
+
 plugins {
     id 'application'
     id 'idea'
@@ -19,6 +26,9 @@ group = 'net.cybercake.display'
 version = '1.0.0'
 mainClassName = "net.cybercake.display.Main"
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
 repositories {
     mavenCentral()
 }
@@ -27,4 +37,20 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:2.6.0'
     implementation 'com.github.junrar:junrar:7.5.5'
 
+//    implementation files('libs/jcef.jar') // Add JCEF JAR
+    implementation 'me.friwi:jcefmaven:132.3.1'
+    implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
+    implementation 'uk.co.caprica:vlcj:4.9.0'
+    implementation 'org.bytedeco:javacv-platform:1.5.6'
+    implementation 'org.openpnp:opencv:3.2.0-0'
+    implementation 'nu.pattern:opencv:2.4.9-4'
+}
+
+application {
+    String jcefPath = String.valueOf(project.rootDir) + File.separator + "libs" + File.separator + "jcef"
+    applicationDefaultJvmArgs = [
+            "-Djava.library.path=" + System.getProperty("java.library.path") + ";" + jcefPath,   // Path to native libraries
+            "-Djcef.resources.dir=" + jcefPath  // Path to JCEF resources
+    ]
+    mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
 }
