--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 application {
     String jcefPath = String.valueOf(project.rootDir) + File.separator + "libs" + File.separator + "jcef"
     applicationDefaultJvmArgs = [
-            "-Djava.library.path=" + System.getProperty("java.library.path") + ";" + jcefPath,   // Path to native libraries
+            "-Djava.library.path=" + System.getProperty("java.library.path") + ":" + jcefPath,   // Path to native libraries
             "-Djcef.resources.dir=" + jcefPath  // Path to JCEF resources
     ]
     mainClass = 'net.cybercake.display.Main' // Replace with your application's main class
