--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     implementation 'me.friwi:jcefmaven:132.3.1'
     implementation 'org.xerial:sqlite-jdbc:3.41.2.2'
     implementation 'uk.co.caprica:vlcj:4.9.0'
-    implementation 'org.bytedeco:javacv-platform:1.5.6'
-    implementation 'org.openpnp:opencv:3.2.0-0'
-    implementation 'nu.pattern:opencv:2.4.9-4'
+//    implementation 'org.bytedeco:javacv-platform:1.5.6'
+//    implementation 'org.openpnp:opencv:3.2.0-0'
+//    implementation 'nu.pattern:opencv:2.4.9-4'
 }
 
 application {
